--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing="20px">
         <tr>
-            <td><img src="kaushik.png" alt="Kaushik profile picture" height="200px"></td>
+            <td><img src="kaushik.jpg" alt="Kaushik profile picture" height="200px"></td>
             <td>
                 <h1>Kaushik Vaity</h1>
                 <p><em>Software Engineer at <strong><a href="https://www.gslab.com/">GS Lab</a></strong>.</em></p>
