--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <h1>Kaushik Vaity</h1>
                 <p><em>Software Engineer at <strong><a href="https://www.gslab.com/">GS Lab</a></strong>.</em></p>
                 <p>I am a Full Stack developer. 2.5 year of IT experience in software development. 
-                   Technical knowledge in Spring Boot, Core Java, SQL, MongoDB, React, Logstash, Microsoft Azure, Docker.
+                   Technical knowledge in Spring Boot, Core Java, SQL, MongoDB, React, Angular, Logstash, Microsoft Azure, Docker.
                 </p>
             </td>
         </tr>
